hphp/hack/test/typecheck/type_structure/type_structure1.php.like_types.exp
File "type_structure1.php", line 22, characters 5-44:
  ~HH\TypeStructure<~int>
File "type_structure1.php", line 23, characters 5-57:
  ~?classname<~C<[unresolved]>>
File "type_structure1.php", line 24, characters 5-57:
  ~?classname<~D>
File "type_structure1.php", line 27, characters 5-30:
  ~?classname<~Vector<~int>>
File "type_structure1.php", line 28, characters 5-34:
  ~?varray<_>
File "type_structure1.php", line 31, characters 5-30:
  ~?classname<~C<~string>>
File "type_structure1.php", line 32, characters 5-34:
  ~?varray<_>
File "type_structure1.php", line 35, characters 5-32:
  ~?varray<_>
File "type_structure1.php", line 36, characters 5-72:
  err
File "type_structure1.php", line 37, characters 5-32:
  ~?darray<_, _>
File "type_structure1.php", line 38, characters 5-48:
  err
File "type_structure1.php", line 39, characters 5-68:
  err
File "type_structure1.php", line 42, characters 5-17:
  ~?darray<_, _>
File "type_structure1.php", line 43, characters 5-24:
  err
File "type_structure1.php", line 44, characters 5-56:
  err
File "type_structure1.php", line 36, characters 13-34:
You are trying to access an element of this container but the container could be null.  (Typing[4063])
File "typestructure.hhi", line 64, characters 20-26:
This is what makes me believe it can be null
